--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,12 @@
     "noEmit": true
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "references": [{ "path": "./tsconfig.node.json" }],
+  "ts-node": {
+    "esm": true,
+    "experimentalSpecifierResolution": "node"
+    // "compilerOptions": {
+    //   "module": "CommonJS"
+    // }
+  }
 }
