--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@types/cors": "2.8",
     "@types/express": "4.17",
     "@types/luxon": "^2.3.1",
+    "@types/marked": "^4.0.3",
     "cors": "2.8",
     "express": "4.17",
     "luxon": "^3.2.1",
+    "marked": "^4.0.3",
     "pinia": "^2.0.14",
     "ts-node": "^10.9.1",
     "vue": "^3.2.45",
